# team-8-backend

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
apps/account_settings/: apps.py  urls.py  views.py
apps/administration_sc/: admin.py  apps.py  auth.py  models.py  permissions.py  urls.py  views.py
apps/administration_sc/backend_auth/: backend_student.py  backend_teacher.py
apps/administration_sc/migrations/: 0001_initial.py  0002_alter_estudiantemodel_cursos_and_more.py  0002_cursomodel_categoria_cursomodel_codigo_curso_and_more.py  0002_remove_estudiantemodel_ciudad_and_more.py  0003_alter_cursomodel_id_estudiante_and_more.py  0003_alter_estudiantemodel_type_document.py  0003_remove_cursomodel_profesores.py  0004_cursomodel_profesores.py  0004_estudiantemodel_contrasena.py  0005_alter_cursomodel_estudiantes_and_more.py  0005_rename_name_cursomodel_nombre.py  0006_profesormodel_contrasena.py  0007_cursomodel_description.py  0007_estudiantemodel_rol_profesormodel_rol.py
apps/administration_sc/serializers/: serializers.py
apps/confimation_email/: admin.py  apps.py  models.py  urls.py  views.py
apps/confimation_email/migrations/: 0001_initial.py
apps/roles/student/: admin.py  apps.py  models.py
back_core/: asgi.py  settings.py  urls.py  wsgi.py
back_core/settings/: base.py  config_vars.py  local.py  production.py
back_core/template/: email_template.html  hola.html
database/: postmaster.pid
database/global/: 1260  pg_control
nginx/: default.conf
(+135 files in other folders)
