[tool.poetry]
name = "administracion-escolar"
version = "0.1.0"
description = ""
authors = ["JhonTreft <jonz37133@gmail.com>"]
readme = "README.md"
packages = [{include = "administracion_escolar"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
